# django-saas-starter

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
docs/: index.md  (+1 more)
{{ cookiecutter.project_slug }}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Dockerfile-python  Makefile  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  pytest.ini  render.yaml  requirements.txt  tailwind.config.js
{{ cookiecutter.project_slug }}/.cursor/: mcp.json
{{ cookiecutter.project_slug }}/.cursor/rules/: ai.mdc  architecture.mdc  backend-logging.mdc  backend.mdc  coding-preferences.mdc  django-async-tasks.mdc  django_snippets.mdc  frontend.mdc  pydantic-ai-agents.mdc  snippets.mdc  stimulus-events.mdc  stimulus-general.mdc  tests.mdc
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  deploy-workers.yml  deploy.yml
{{ cookiecutter.project_slug }}/api/: auth.py  schemas.py  urls.py  views.py
{{ cookiecutter.project_slug }}/apps/api/: __init__.py  auth.py  schemas.py  services.py  tests.py  urls.py  utils.py  views.py
{{ cookiecutter.project_slug }}/apps/blog/: __init__.py  admin.py  models.py  urls.py  views.py
{{ cookiecutter.project_slug }}/apps/blog/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/apps/core/: __init__.py  admin.py  choices.py  context_processors.py  forms.py  model_utils.py  models.py  signals.py  stripe_webhooks.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
{{ cookiecutter.project_slug }}/apps/core/agents/: base.py
{{ cookiecutter.project_slug }}/apps/core/migrations/: 0001_enable_extensions.py  0002_initial.py  0002_initial_models.py
{{ cookiecutter.project_slug }}/apps/core/templatetags/: markdown_extras.py
{{ cookiecutter.project_slug }}/apps/core/tests/: conftest.py  test_chatwoot_context.py  test_delete_account.py  test_email_delivery.py  test_helpers.py  test_signals.py  test_signup_gating.py  test_stripe_webhooks.py  test_views.py
{{ cookiecutter.project_slug }}/apps/docs/: AGENTS.md  __init__.py  navigation.yaml  tests.py  urls.py  views.py
{{ cookiecutter.project_slug }}/apps/docs/content/api-reference/: introduction.md  user.md
{{ cookiecutter.project_slug }}/apps/docs/content/deployment/: chatwoot.md  docker-compose-deployment.md  environment-variables.md  (+1 more)
{{ cookiecutter.project_slug }}/apps/mcp_server/: apps.py  server.py
{{ cookiecutter.project_slug }}/apps/mcp_server/tests/: test_server.py
{{ cookiecutter.project_slug }}/apps/pages/: __init__.py  context_processors.py  models.py  tests.py  urls.py  views.py
{{ cookiecutter.project_slug }}/apps/pages/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/blog/: admin.py  choices.py  models.py  urls.py  views.py
{{ cookiecutter.project_slug }}/core/: admin.py  apps.py  choices.py  context_processors.py  forms.py  model_utils.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
{{ cookiecutter.project_slug }}/core/api/: auth.py  schemas.py  views.py
{{ cookiecutter.project_slug }}/core/migrations/: 0001_enable_extensions.py
{{ cookiecutter.project_slug }}/core/templatetags/: markdown_extras.py
{{ cookiecutter.project_slug }}/core/tests/: conftest.py
{{ cookiecutter.project_slug }}/deployment/: Dockerfile.server  Dockerfile.workers  entrypoint.sh  gunicorn.config.py
{{ cookiecutter.project_slug }}/docs/: getting-started.md  index.md  urls.py  views.py
{{ cookiecutter.project_slug }}/docs/content/features/: example_feature.md
{{ cookiecutter.project_slug }}/frontend/src/application/: index.js
{{ cookiecutter.project_slug }}/frontend/src/controllers/: copy_controller.js  delete_account_controller.js  docs_code_controller.js  feedback_controller.js  referrer_banner_controller.js  theme_controller.js  toc_controller.js  user_settings_controller.js
{{ cookiecutter.project_slug }}/frontend/src/styles/: index.css  pygments.css
{{ cookiecutter.project_slug }}/frontend/src/utils/: clipboard.js  messages.js
{{ cookiecutter.project_slug }}/frontend/templates/: 404.html  base.html  base_app.html  base_landing.html
{{ cookiecutter.project_slug }}/frontend/templates/account/: email-confirm.html  email.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  reauthenticate.html  signup.html  signup_by_passkey.html  signup_closed.html
{{ cookiecutter.project_slug }}/frontend/templates/blog/: blog_post.html  blog_posts.html
{{ cookiecutter.project_slug }}/frontend/templates/components/: chatwoot.html  confirm-email.html  feedback.html  messages.html  referrer_banner.html
{{ cookiecutter.project_slug }}/frontend/templates/docs/: base_docs.html  docs_page.html
{{ cookiecutter.project_slug }}/frontend/templates/emails/: test_mjml.html
{{ cookiecutter.project_slug }}/frontend/templates/mfa/: base_manage.html  index.html
{{ cookiecutter.project_slug }}/frontend/templates/pages/: admin-panel.html  home.html  landing-page.html  pricing.html  privacy-policy.html  terms-of-service.html  user-settings.html  uses.html
{{ cookiecutter.project_slug }}/frontend/webpack/: webpack.config.dev.js
{{ cookiecutter.project_slug }}/pages/: admin.py  context_processors.py  models.py  urls.py  views.py
{{ cookiecutter.project_slug }}/snippets/: example.py
{{ cookiecutter.project_slug }}/templates/: base.html
{{ cookiecutter.project_slug }}/templates/account/: login.html  logout.html  signup.html
{{ cookiecutter.project_slug }}/templates/pages/: home.html
{{ cookiecutter.project_slug }}/users/: admin.py  forms.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: adapters.py  asgi.py  logging_utils.py  requirements.txt  sentry_utils.py  settings.py  sitemaps.py  storages.py  urls.py  utils.py  wsgi.py
(+31 files in other folders)
