[tool.poetry]
name = "cookiecutter-django-bwd"
version = "0.1.0"
description = "Minimalistic SaaS Template for Django Projects"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
